2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Add rpm SPEC file.
	* Makefile.am: Enable rpm rules.
	* roboptim-core-ipopt-plugin.spec.in: New.

2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Update documentation.
	* .gitmodules: Remove old doc submodule.
	* doc/Doxyfile.extra.in: New.
	* doc/Makefile.am: New.
	* doc: Remove.

2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Update buildchain.
	* .gitignore: Ignore more files (like ``.version'').
	* Makefile.am: Factorize rules.
	* build-aux: Synchronize.

2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Upgrade to RobOptim core 0.5.6.

        CAUTION: starting from now, $(libdir)/roboptim-core /MUST/
        be in your LT_LIBRARY_PATH! It is also recommended to remove
        manually your old $(libdir)/roboptim-core-ipopt* files.

	* configure.ac: Require newer roboptim-core.
	* include/roboptim/core/plugin/ipopt.hh:
	Declare parameters management methods.
	* src/Makefile.am: Install plug-in in separate directory.
	* src/roboptim-core-ipopt-plugin.cc: Management parameters properly.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-08-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Update to new SourceForge URLs.
	* .gitmodules: Update to new URLs.
	* bootstrap: Detect new alias.

2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Disable gcov support in plug-in.
	* src/Makefile.am: Here.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle submodule and check for git.
	* bootstrap: Here.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Update build-aux submodule.
	* build-aux: Update submodule.

2009-07-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Use submodules to factorize build-aux, doc and tests.
	* .gitmodules: New.
	* build-aux/acx_pthread.m4: Remove.
	* build-aux/autotest.at: Remove.
	* build-aux/autotest.mk: Remove.
	* build-aux/boost.m4: Remove.
	* build-aux/bootstrap: Remove.
	* build-aux/config.guess: Remove.