@@ -1,3 +1,9 @@
+2010-04-14  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Uniformize behavior on Windows and Unix.
+	* src/roboptim-core-ipopt-plugin.cc: Merge Windows and Linux
+	specific constructors.
+
 2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Add rpm SPEC file.
